# hackathon-sf2442

./: .clang-format  .gitignore  CMakeLists.txt
include/: BoostCalculator.hpp  Command.hpp  CourseCalculator.hpp  Drone.hpp  Game.hpp  Geometry.hpp  IBoostCalculator.hpp  ICourseCalculator.hpp  IGame.hpp  ILapCalculator.hpp  ILongestSegmentCalculator.hpp  ITargetCalculator.hpp  LapCalculator.hpp  Logic.hpp  LongestSegmentCalculator.hpp  TargetCalculator.hpp
src/: BoostCalculator.cpp  CourseCalculator.cpp  Cumulative.cpp  Game.cpp  LapCalculator.cpp  Logic.cpp  LongestSegmentCalculator.cpp  TargetCalculator.cpp  main.cpp
test/: BoostCalculatorTestSuite.cpp  CommandTestSuite.cpp  CourseCalculatorTestSuite.cpp  GameTestSuite.cpp  LapCalculatorTestSuite.cpp  LogicTestSuite.cpp  LongestSegmentCalculatorTestSuite.cpp  TargetCalculatorTestSuite.cpp
test/mock/: BoostCalculatorMock.hpp  CourseCalculatorMock.hpp  GameMock.hpp  GeometryMatchers.hpp  LapCalculatorMock.hpp  LongestSegmentCalculatorMock.hpp  TargetCalculatorMock.hpp
